src/test/resources/typeSystemTestModels/valid/expressions/TypeCastTypeExpression.java
/* (c) https://github.com/MontiCore/monticore */

public class TypeCastTypeExpression {

  public void test(){
    Character c = 'a';
    int n = (int)c;

    Integer i = 2;
    char h = (char)i;
  }

}
